# langgraph-chatbot

./: .dockerignore  .gitignore  Dockerfile  EMAIL_IMPLEMENTATION_SUMMARY.md  EMAIL_SETUP.md  README.md  README_REFACTOR.md  REFACTORING_SUMMARY.md  api.py  app.py  cleanup.py  cli.py  client_example.html  docker-compose.yml  gradio_app.py  gradio_streaming.py  graph.py  main.py  migrate.py  prompt_manager.py  pyproject.toml  requirements.txt  run_gradio.py  start.sh  start_refactored.py  test_api.py  test_chatbot_email.py  test_email.py  test_email_with_config.py
ics_out/: 070e2470-e2f2-58d7-9359-0d6d367c3b32.ics  0f1d47ee-e6c3-5864-a6bc-451d9b63bea4.ics  2e882267-1f0e-541b-a475-f5d173598f42.ics  3d1ea976-3d91-538e-b618-3f4b23bbb6bc.ics  91f76c67-429c-5a9d-a215-202e15e65561.ics  9e100f04-f827-58e3-84c7-0d6f6f41eee4.ics  aeba91ce-ef1e-50b9-b4a1-8c6d6effd1dd.ics  c15bb112-da25-5290-bf96-675e9db600ba.ics  c4275f7e-4663-59ca-a5aa-7ea289ff932b.ics  c6017d6c-b458-5cdc-8a42-3f660c7aba44.ics  ccc255aa-ec32-5822-bb17-e9739eca60a6.ics  de72415a-ce60-5d68-a15f-54a75804fd3c.ics  e5cb9382-ab5a-5f18-9a5d-893ddcb322ce.ics  ee7a1107-07ab-5186-9cdb-8e2f1759fac0.ics  f37b4bf3-7db4-5e4d-a2f5-d1cbf5cf236e.ics  f543d325-a445-5d85-874d-4f5d94f4b07a.ics  fc458180-a59e-511f-ab4a-46bf92042bf9.ics  fe64f092-ecf8-5712-8994-18e19e2b4390.ics
prompts/: chatbot_v1.md
src/: __init__.py
src/api/: app.py
src/cli/: __init__.py  (+1 more)
tests/: test_api.py
tools/: __init__.py  agent_info.py  calculator.py  check_availability.py  client_validation.py  create_event.py  property_manager.py  system.py  web.py
(+16 files in other folders)
