[project]
name = "langgraph-chatbot"
version = "0.1.0"
description = "Simple LangGraph CLI chatbot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langgraph",
  "langchain",
  "langchain-openai",
  "python-dotenv",
  "requests",
  "langchain-mistralai>=0.2.11",
]

[project.scripts]
chatbot = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false


